Fixed theming to be consistent with main site

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,10 @@ googleAnalytics = "G-8X9S6TVTZ8"
 pygmentsUseClasses = true
 relativeURLs = true
 disablePathToLower = true
+
+custom_css = ["css/bootstrap.min.css"]
+custom_js = ["js/boostrap.min.js"]
+
 ignoreFiles = [
     "/content/templates/*",
     "/content/private/*",
@@ -25,3 +29,9 @@ ignoreFiles = [
         lineNumbersInTable = true
         style = "dracula"
         tabWidth = 4
+
+[[menu.main]]
+  name = "Back to Deemonsecurity.com"
+  weight = 100
+  identifier = "back"
+  url = "https://deemonsecurity.com"
